--- a/lab2/tutorial02/home.html
+++ b/lab2/tutorial02/home.html
@@ -1,9 +1,8 @@
 <html>
-	<head><title>Week2 tasks</title>
-	</head>
-	<body>
-		<h1>Welcome!</h1>	
-		
-	</body>
-</html>	
-		
+  <head>
+    <title>Week2 tasks</title>
+  </head>
+  <body>
+    <h1>Welcome!</h1>
+  </body>
+</html>
