--- a/lab2/tutorial02/register.html
+++ b/lab2/tutorial02/register.html
@@ -1,27 +1,27 @@
 <html>
-	<head><title>Week2 tasks</title>
-	</head>
-	<body>
-		<table>
-			<tr>	
-				<td>Student name:</td>
-				<td>
-					<input type="text" ></input>
-				</td>
-			</tr>
-			<tr>	
-				<td>Student ID:</td>
-				<td>
-					<input type="text"></input>
-				</td>
-			</tr>
-			<tr>	
-				<td></td>
-				<td>
-					<input type="button" value="Register"></input>
-				</td>
-			</tr>
-		</table>			
-	</body>
-</html>	
-		
+  <head>
+    <title>Week2 tasks</title>
+  </head>
+  <body>
+    <table>
+      <tr>
+        <td>Student name:</td>
+        <td>
+          <input type="text" />
+        </td>
+      </tr>
+      <tr>
+        <td>Student ID:</td>
+        <td>
+          <input type="text" />
+        </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>
+          <input type="button" value="Register" />
+        </td>
+      </tr>
+    </table>
+  </body>
+</html>
